force-app/main/default/objects/WorkStep/fields/Added_from_WOL__c.field-meta.xml
<CustomField>
    <fullName>Added_from_WOL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added from WOL</label>
    <type>Checkbox</type>
</CustomField>