force-app/main/default/objects/WorkStep/fields/Not_Applicable_Comments__c.field-meta.xml
<CustomField>
    <fullName>Not_Applicable_Comments__c</fullName>
    <label>Not Applicable Comments</label>
    <type>TextArea</type>
</CustomField>