force-app/main/default/objects/WorkStep/fields/Not_Applicable_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Not_Applicable_Reasons__c</fullName>
    <label>Not Applicable Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer quality complaint</fullName>
            </value>
            <value>
                <fullName>Internal quality complaint</fullName>
            </value>
            <value>
                <fullName>Lack of equipment</fullName>
            </value>
            <value>
                <fullName>Lack of skills</fullName>
            </value>
            <value>
                <fullName>No access to a certain area on the site</fullName>
            </value>
            <value>
                <fullName>No access to the site</fullName>
            </value>
            <value>
                <fullName>Task not applicable for this site</fullName>
            </value>
            <value>
                <fullName>Task not performed at customer&apos;s request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>